# btp_scraper

./: .gitignore  0424full.csv  0424full_1.csv  0424full_200.csv  CLAUDE.md  JBSOS_실제구조_분석_및_개선사항.md  MIGRATION_GUIDE.md  README.md  SOFTWARE_DEV_PLAN.md  advanced_scraper.py  analyze_ccei_detail.py  analyze_ccei_download_area.py  analyze_detail.py  analyze_djbea_attachments.py  analyze_export_voucher_js.py  analyze_iris_download.py  analyze_itp.py  analyze_itp_detail.py  analyze_itp_download.py  analyze_seq7949.py  analyze_site.py  analyze_smtech_structure.py  analyze_wmit.py  atcenter_debug.html  ayventure_detail.html  ayventure_loaded.html  ayventure_page1.html  base_scraper.py  bizbc_analysis.py  bizbc_code.txt  btp_scraper.py  btp_scraper_old.py  busanit_code.txt  cbf_code.txt  ccei_chungbuk.html  ccei_detail.html  ccei_detail_fresh.html  ccei_list.html  ccei_scraper.py  ccei_scraper_improved.py  (+472 more)
insight/: acci_insights.md  agrix_code.txt  andongcci_code.txt  ansancci_insights.md  ayventure_code.txt  baroinfo_code.txt  bcci_insights.md  bsia_code.txt  cba_code.txt  changwoncci_code.txt  chilgokcci_insights.md  chuncheoncci_insights.md  ctia_code.txt  daejeoncci_insights.md  dcci_insights.md  debc_code.txt  dip_code.txt  djtp_code.txt  eumseongcci_code.txt  gama_code.txt  gangneungcci_code.txt  gbtp_code.txt  gcaf_code.txt  gcube_code.txt  gdc_code.txt  gdtp_code.txt  gib_code.txt  gicon_code.txt  gimpocci_code.txt  gipa_code.txt  gjcitylib_code.txt  gjtp_code.txt  gmcci_code.txt  gmr_code.txt  gnlife_code.txt  gnto_code.txt  gtp_code.txt  gunsancci_code.txt  (+53 more)
(+103 files in other folders)
