[project]
name = "btp-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "html2text>=2025.4.15",
    "lxml>=5.4.0",
    "playwright>=1.52.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]
